--- a/Övningsuppgifter/Övning-1/index.html
+++ b/Övningsuppgifter/Övning-1/index.html
@@ -13,8 +13,22 @@ All den datan kommer att finnas med i listan som du fått.
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Övning 1</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Quote of the day</h1>
+    </header>
+    <section class = 'container'>
+        <div class ="container-box">
+            <div class="text">
+                <p id="content"></p>
+                <p id="author"></p>
+            </div>
+        </div>
+    </section>
+    
+
     <script src="script.js"></script>
 </body>
 </html>
