--- a/Examinerande Inlämningsuppgift/försök-4/index.html
+++ b/Examinerande Inlämningsuppgift/försök-4/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<div class="card">
-			<h1>Todo List</h1>
+			<h1>My To-do List</h1>
 			<input type="text" id="taskInput" placeholder="Add task...">
 			<button id="addTaskBtn">Add</button>
 			<div id="errorMsg">Please enter a task.</div>
@@ -18,5 +18,4 @@
 	</div>
 	<script src="script.js"></script>
 </body>
-</html>
 </html>
